# goit-py_web-hw-13

./: README.md
Django/: pyproject.toml
Django/hw_10/: conf.py  docker-compose.yml  manage.py
Django/hw_10/hw_10/: asgi.py  settings.py  urls.py  wsgi.py
Django/hw_10/hw_10/templates/registration/: password_reset_email.html
Django/hw_10/postgres-data/: postmaster.pid
Django/hw_10/postgres-data/base/1/: 2619  pg_internal.init
Django/hw_10/postgres-data/base/16384/: 1247  1249  1259  16388  16389  16394  16396  16397  16400  16402  16404  16405  16408  16410  16424  16425  16428  16430  16436  16438  16442  16444  16451  16465  16467  16468  16496  16525  16529  16530  16532  16533  2224  2579  2606  2608  2610  2620  2658  2659  (+18 more)
Django/hw_10/postgres-data/base/5/: pg_internal.init
Django/hw_10/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
Django/hw_10/quotes/: apps.py  forms.py  urls.py  utils.py  views.py
Django/hw_10/quotes/static/quotes/: style.css
Django/hw_10/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  quotes_by_tag.html
Django/hw_10/quotes/templatetags/: extract.py
Django/hw_10/users/: forms.py  urls.py  views.py
Django/hw_10/users/static/users/: style.css
Django/hw_10/users/templates/registration/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
FastAPI/: main.py  pyproject.toml
FastAPI/src/repository/: contacts.py
