[tool.poetry]
name = "goit-py-web-hw-10"
version = "0.1.0"
description = ""
authors = ["Serge-Moskalenko <skmos2019@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
pymongo = "^4.11.3"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
